manifests/pipelines-0.12.0.tgz-manifest.yaml
---
# Source: pipelines/templates/controller_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-pipelines-controller
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/part-of: tekton-pipelines
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: pipelines-0.12.0
    app.kubernetes.io/version: v0.12.1
    pipeline.tekton.dev/release: v0.12.1
    version: v0.12.1
    app.kubernetes.io/component: controller
    app.kubernetes.io/name: controller
spec:
  type: ClusterIP
  ports:
    - name: metrics
      port: 9090
      protocol: TCP
      targetPort: 9090
  selector:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/part-of: tekton-pipelines
    app.kubernetes.io/component: controller
    app.kubernetes.io/name: controller
---
# Source: pipelines/templates/webhook_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-pipelines-webhook
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/part-of: tekton-pipelines
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: pipelines-0.12.0
    app.kubernetes.io/version: v0.12.1
    pipeline.tekton.dev/release: v0.12.1
    version: v0.12.1
    app.kubernetes.io/component: webhook
    app.kubernetes.io/name: webhook
spec:
  type: ClusterIP
  ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: 8443
    - name: http-metrics
      port: 9090
      protocol: TCP
      targetPort: 9090
    - name: http-profiling
      port: 8008
      protocol: TCP
      targetPort: 8008
  selector:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/part-of: tekton-pipelines
    app.kubernetes.io/component: webhook
    app.kubernetes.io/name: webhook
---
# Source: pipelines/templates/controller_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-pipelines-controller
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/part-of: tekton-pipelines
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: pipelines-0.12.0
    app.kubernetes.io/version: v0.12.1
    pipeline.tekton.dev/release: v0.12.1
    version: v0.12.1
    app.kubernetes.io/component: controller
    app.kubernetes.io/name: controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/part-of: tekton-pipelines
      app.kubernetes.io/component: controller
      app.kubernetes.io/name: controller
  template:
    metadata:
      annotations:
        cluster-autoscaler.kubernetes.io/safe-to-evict: "false"
      labels:
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/part-of: tekton-pipelines
        app.kubernetes.io/managed-by: Helm
        helm.sh/chart: pipelines-0.12.0
        app.kubernetes.io/version: v0.12.1
        pipeline.tekton.dev/release: v0.12.1
        version: v0.12.1
        app.kubernetes.io/component: controller
        app.kubernetes.io/name: controller
    spec:
      serviceAccountName: my-release-pipelines
      containers:
        - name: controller
          image: gcr.io/tekton-releases/github.com/tektoncd/pipeline/cmd/controller:v0.12.1
          imagePullPolicy: "IfNotPresent"
          args:
            - "-kubeconfig-writer-image"
            - "gcr.io/tekton-releases/github.com/tektoncd/pipeline/cmd/kubeconfigwriter:v0.12.1"
            - "-creds-image"
            - "gcr.io/tekton-releases/github.com/tektoncd/pipeline/cmd/creds-init:v0.12.1"
            - "-git-image"
            - "gcr.io/tekton-releases/github.com/tektoncd/pipeline/cmd/git-init:v0.12.1"
            - "-nop-image"
            - "tianon/true@sha256:009cce421096698832595ce039aa13fa44327d96beedb84282a69d3dbcf5a81b"
            - "-shell-image"
            - "busybox@sha256:a2490cec4484ee6c1068ba3a05f89934010c85242f736280b35343483b2264b6"
            - "-gsutil-image"
            - "google/cloud-sdk@sha256:6e8676464c7581b2dc824956b112a61c95e4144642bec035e6db38e3384cae2e"
            - "-entrypoint-image"
            - "gcr.io/tekton-releases/github.com/tektoncd/pipeline/cmd/entrypoint:v0.12.1"
            - "-imagedigest-exporter-image"
            - "gcr.io/tekton-releases/github.com/tektoncd/pipeline/cmd/imagedigestexporter:v0.12.1"
            - "-pr-image"
            - "gcr.io/tekton-releases/github.com/tektoncd/pipeline/cmd/pullrequest-init:v0.12.1"
            - "-build-gcs-fetcher-image"
            - "gcr.io/tekton-releases/github.com/tektoncd/pipeline/vendor/github.com/googlecloudplatform/cloud-builders/gcs-fetcher/cmd/gcs-fetcher:v0.12.1"
          volumeMounts:
            - mountPath: /etc/config-logging
              name: config-logging
          ports:
            - containerPort: 9090
              protocol: TCP
      volumes:
        - name: config-logging
          configMap:
            name: my-release-pipelines-logging
---
# Source: pipelines/templates/webhook_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-pipelines-webhook
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/part-of: tekton-pipelines
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: pipelines-0.12.0
    app.kubernetes.io/version: v0.12.1
    pipeline.tekton.dev/release: v0.12.1
    version: v0.12.1
    app.kubernetes.io/component: webhook
    app.kubernetes.io/name: webhook
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/part-of: tekton-pipelines
      app.kubernetes.io/component: webhook
      app.kubernetes.io/name: webhook
  template:
    metadata:
      annotations:
        cluster-autoscaler.kubernetes.io/safe-to-evict: "false"
      labels:
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/part-of: tekton-pipelines
        app.kubernetes.io/managed-by: Helm
        helm.sh/chart: pipelines-0.12.0
        app.kubernetes.io/version: v0.12.1
        pipeline.tekton.dev/release: v0.12.1
        version: v0.12.1
        app.kubernetes.io/component: webhook
        app.kubernetes.io/name: webhook
    spec:
      serviceAccountName: my-release-pipelines-webhook
      containers:
        - name: webhook
          image: gcr.io/tekton-releases/github.com/tektoncd/pipeline/cmd/webhook:v0.12.1
          imagePullPolicy: "IfNotPresent"
          securityContext:
            allowPrivilegeEscalation: false
          ports:
            - name: metrics
              containerPort: 9090
            - name: profiling
              containerPort: 8008
            - name: https-webhook
              containerPort: 8443
---
# Source: pipelines/templates/webhook_admission.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: webhook.pipeline.tekton.dev
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/part-of: tekton-pipelines
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: pipelines-0.12.0
    app.kubernetes.io/component: webhook
webhooks:
  - name: webhook.pipeline.tekton.dev
    admissionReviewVersions:
      - v1beta1
    clientConfig:
      service:
        name: my-release-pipelines-webhook
        namespace: default
    failurePolicy: Fail
    sideEffects: None
---
# Source: pipelines/templates/webhook_admission.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: validation.webhook.pipeline.tekton.dev
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/part-of: tekton-pipelines
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/part-of: tekton-pipelines
    app.kubernetes.io/component: webhook
webhooks:
  - name: validation.webhook.pipeline.tekton.dev
    admissionReviewVersions:
      - v1beta1
    clientConfig:
      service:
        name: my-release-pipelines-webhook
        namespace: default
    failurePolicy: Fail
    sideEffects: None
---
# Source: pipelines/templates/webhook_admission.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: config.webhook.pipeline.tekton.dev
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/part-of: tekton-pipelines
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: pipelines-0.12.0
    app.kubernetes.io/component: webhook
webhooks:
  - name: config.webhook.pipeline.tekton.dev
    admissionReviewVersions:
      - v1beta1
    clientConfig:
      service:
        name: my-release-pipelines-webhook
        namespace: default
    failurePolicy: Fail
    sideEffects: None
    objectSelector:
      matchLabels:
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/part-of: tekton-pipelines
